# quot

./: .gitignore  .mailmap  Cargo.toml  LICENSE  README.md  build-release.sh  cleanup-tags.sh  clippy.toml  finalize-release.sh  publish-crate.sh  release.sh  test-release.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-checks.yml  docs.yml  nightly.yml  pr-checks.yml  pr-fast.yml  release.yml
docs/: CLIPPY.md
src/: clipboard_handler.rs  file_handler.rs  file_input.rs  input.rs  main.rs  stdin_handler.rs
