[package]
name = "quot"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A fast and flexible command-line tool that converts text input into escaped string literals"
repository = "https://github.com/elasticsatch/quot"
homepage = "https://github.com/elasticsatch/quot"
documentation = "https://github.com/elasticsatch/quot#readme"
authors = ["Satoshi Iizuka <satoshi.iizuka@elastic.co>"]
keywords = ["cli", "text", "escape", "string", "literal"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
exclude = [
    "test-release.sh",
    "build-release.sh",
    ".github/",
    "target/",
]

[dependencies]
atty = "0.2.14"
regex = "1.0"
crossterm = "0.27"
