[package]
name = "quot"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A fast and flexible command-line tool that converts text input into escaped string literals"
repository = "https://github.com/elasticsatch/quot"
homepage = "https://github.com/elasticsatch/quot"
documentation = "https://github.com/elasticsatch/quot#readme"
authors = ["Satoshi Iizuka <satoshi.iizuka@elastic.co>"]
keywords = ["cli", "text", "escape", "string", "literal"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
exclude = [
    "test-release.sh",
    "build-release.sh",
    ".github/",
    "target/",
]

[dependencies]
atty = "0.2.14"
regex = "1.0"
crossterm = "0.27"

# Clippy configuration to enforce code quality and modern Rust idioms
[lints.clippy]
# The key lint: enforce inline variable syntax in format macros
uninlined_format_args = "warn"
# Additional code quality lints
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
# Complexity management
cognitive_complexity = { level = "warn", priority = -1 }
too_many_arguments = { level = "warn", priority = -1 }
